--- a/.muse/config
+++ b/.muse/config
@@ -1,3 +1,3 @@
 # Muse configuration file
 
-customTools = [ ".muse/check-common-comments.sh" ]
+customTools = [ "https://docs.muse.dev/scripts/check-common-comments.sh" ]
